# Monolith

./: .gitignore  Cargo.toml  README.md  monolith.sqlite
backup/: architect_wall-copy.rs  main-copy.rs  new_app main-copy.rs
crates/misc/: Cargo.toml  main-copy.rs
crates/misc/src/: lib.rs  main.rs
crates/mn_app/: Cargo.toml
crates/mn_app/assets/shaders/: world_grid.wgsl
crates/mn_app/src/: camera_controls-copy.rs  camera_controls.rs  commands.rs  main.rs  selection.rs  viewport.rs  viewport_overlay.rs  window.rs  world_grid.rs
crates/mn_app/src/tools/: architect_wall.rs  mod.rs
crates/mn_core/: Cargo.toml
crates/mn_core/src/: commands.rs  element.rs  enums.rs  icons.rs  lib.rs  primitives.rs  tool.rs
crates/mn_db/: Cargo.toml
crates/mn_egui/: Cargo.toml
crates/mn_egui/src/: dock_state.rs  lib.rs  systems.rs  theme.rs  viewer.rs
crates/mn_egui/src/tabs/: console.rs
crates/mn_egui/src/widgets/: menubar.rs
crates/mn_ui/: Cargo.toml
crates/mn_ui/src/: app.rs  dock_state.rs  icons.rs  lib.rs  resize.rs  systems.rs  theme.rs  viewer.rs  viewport_overlay.rs
crates/mn_ui/src/tabs/: explorer.rs  mod.rs  properties.rs  sceneview.rs  viewport.rs
crates/mn_ui/src/tabs/properties_tabs/: collaboration_tab.rs  graphics_tab.rs  information_tab.rs  mod.rs  modifiers_tab.rs  parameters_tab.rs  spatial_tab.rs
crates/mn_ui/src/widgets/: collapsible.rs  menubar.rs  mod.rs  property_collapsible-copy.rs  property_collapsible.rs  sidebar_panel.rs  tabs_combobox.rs  vertical_tab.rs  windows.rs
crates/new_app/: Cargo.toml
crates/new_app/src/: main.rs
crates/new_app/src/camera/: camera_plugin.rs  controls.rs  mod.rs  setup_egui.rs  setup_scene.rs  viewport.rs
crates/new_app/src/tools/: mod.rs
crates/new_core/: Cargo.toml
crates/new_core/src/: element.rs  lib.rs  pane_kind.rs  placement.rs
crates/new_core/src/elements/: element_kind.rs  element_kindtype.rs  element_kindtype_enums.rs  element_subtype.rs  mod.rs
crates/new_db/: Cargo.toml
crates/new_db/src/: db.rs  lib.rs  repo.rs
crates/new_ui/: Cargo.toml
crates/new_ui/src/: dock.rs  lib.rs  tree.rs  utils.rs
crates/new_ui/src/pane/: mod.rs  pane_console.rs  pane_properties.rs  pane_viewport.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  docktabs.rs  main.rs  tabs.rs  theme.rs  utils.rs
crates/ui/src/widgets/: menubar.rs  mod.rs  windows.rs
docs/: Philosophy.md  Structure.md
(+9 files in other folders)
