[workspace]
resolver = "3"
members = [
    "crates/misc", "crates/mn_app",
    "crates/mn_core", "crates/mn_egui",
    "crates/mn_ui", 
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
