[package]
name = "mn_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy_egui = "0.38.1"
egui_dock = "0.18.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
mn_core = { path = "../mn_core"}
strum = "0.27.2"
strum_macros = "0.27.2"
[features]
# 1. By default, enable the 'dev' feature (Fast Compile)
default = ["dev"] 

# 2. The 'dev' feature triggers Bevy's dynamic linking
dev = ["bevy/dynamic_linking"]
